@@ -2,7 +2,7 @@
  * Copyright (C) 1995 Spencer Kimball and Peter Mattis
  *
  * gimpsessioninfo.h
- * Copyright (C) 2001-2007 Michael Natterer <mitch@gimp.org>
+ * Copyright (C) 2001-2008 Michael Natterer <mitch@gimp.org>
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -23,8 +23,23 @@
 #define __GIMP_SESSION_INFO_H__
 
 
+#include "core/gimpobject.h"
+
+
+#define GIMP_TYPE_SESSION_INFO            (gimp_session_info_get_type ())
+#define GIMP_SESSION_INFO(obj)            (G_TYPE_CHECK_INSTANCE_CAST ((obj), GIMP_TYPE_SESSION_INFO, GimpSessionInfo))
+#define GIMP_SESSION_INFO_CLASS(klass)    (G_TYPE_CHECK_CLASS_CAST ((klass), GIMP_TYPE_SESSION_INFO, GimpSessionInfoClass))
+#define GIMP_IS_SESSION_INFO(obj)         (G_TYPE_CHECK_INSTANCE_TYPE ((obj), GIMP_TYPE_SESSION_INFO))
+#define GIMP_IS_SESSION_INFO_CLASS(klass) (G_TYPE_CHECK_CLASS_TYPE ((klass), GIMP_TYPE_SESSION_INFO))
+#define GIMP_SESSION_INFO_GET_CLASS(obj)  (G_TYPE_INSTANCE_GET_CLASS ((obj), GIMP_TYPE_SESSION_INFO, GimpSessionInfoClass))
+
+
+typedef struct _GimpSessionInfoClass  GimpSessionInfoClass;
+
 struct _GimpSessionInfo
 {
+  GimpObject              parent_instance;
+
   gint                    x;
   gint                    y;
   gint                    width;
@@ -49,9 +64,15 @@ struct _GimpSessionInfo
   GList                  *books;
 };
 
+struct _GimpSessionInfoClass
+{
+  GimpObjectClass  parent_class;
+};
+
+
+GType             gimp_session_info_get_type     (void) G_GNUC_CONST;
 
 GimpSessionInfo * gimp_session_info_new          (void);
-void              gimp_session_info_free         (GimpSessionInfo   *info);
 
 void              gimp_session_info_serialize    (GimpConfigWriter  *writer,
                                                   GimpSessionInfo   *info,
